--- a/haskell-lab2/haskell-lab2.cabal
+++ b/haskell-lab2/haskell-lab2.cabal
@@ -1,24 +1,40 @@
 cabal-version:   3.4
 name:            haskell-lab2
 version:         0.1.0.0
+synopsis:        Parallel Batcher's Odd-Even Mergesort implementation
+description:     A Haskell implementation of Batcher's odd-even mergesort
+                 algorithm with parallel execution support.
 license:         MIT
 license-file:    LICENSE
 author:          Vasyl Pavlyuchenko
 maintainer:      vasyl.pavlyuchenko@gmail.com
-category:        Math
+category:        Algorithms
 build-type:      Simple
 extra-doc-files: CHANGELOG.md
 
 common warnings
-    ghc-options: -Wall
+    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates
+                 -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
+
+library
+    import:           warnings
+    exposed-modules:  Sort.Batcher
+                    , Types
+                    , IO.Prompt
+                    , IO.RandomArray
+    build-depends:    base ^>=4.18.3.0
+                    , parallel
+                    , vector
+                    , random
+                    , deepseq
+    hs-source-dirs:   src
+    default-language: Haskell2010
 
 executable haskell-lab2
     import:           warnings
     main-is:          Main.hs
-    build-depends:    base ^>=4.18.3.0,
-                      parallel,
-                      vector,
-                      random
+    build-depends:    base ^>=4.18.3.0
+                    , haskell-lab2
     hs-source-dirs:   app
     default-language: Haskell2010
-    ghc-options:      -threaded
+    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
