--- a/haskell-lab3/haskell-lab3.cabal
+++ b/haskell-lab3/haskell-lab3.cabal
@@ -57,6 +57,8 @@ common warnings
 library
     import:           warnings
     exposed-modules:  TextProcessor
+                    , TextProcessor.Types
+                    , TextProcessor.Utils
     build-depends:    base ^>=4.18.3.0
     hs-source-dirs:   src
     default-language: Haskell2010
